--- a/src/retangulo/index.scss
+++ b/src/retangulo/index.scss
@@ -64,7 +64,19 @@
         font-size: 30px;
         max-width: 30px;
         align-items: center;
-        line-height: 50%;
+        line-height: 60%;
+    }
+
+    .sub {
+        background-color: aqua;
+        width: 100%;
+        padding: 1em;
+        justify-content: space-evenly;
+        align-items: center;
+        display: flex;
+        flex-direction: row;
+        border-radius: 15px;
+        margin-bottom: 1em;
     }
 }
 
