par ou impar pronto e media mediaAluno quase

--- a/src/mediaAluno/index.scss
+++ b/src/mediaAluno/index.scss
@@ -1,10 +1,18 @@
 .resultado{
 
     flex-direction: column;
-    max-width: 10px;
+    max-width: 170px;
     line-height: 120%;
     
 
+}
+
+.inputt{
+    width: 100px;
+}
+
+*{
+    //border:  solid 1px black;
 }
 
 
